[gd_scene load_steps=9 format=3 uid="uid://otr16j77ikkl"]

[ext_resource type="Script" path="res://exp_world.gd" id="1_vdivu"]
[ext_resource type="Texture2D" uid="uid://bln4jafahgiti" path="res://assets/ground3.jpg" id="2_1f6d0"]
[ext_resource type="Texture2D" uid="uid://b0b35goo3q6qd" path="res://assets/jawbreaker_tiles.png" id="3_57abc"]
[ext_resource type="PackedScene" uid="uid://cw1hvpgewhgqr" path="res://player.tscn" id="4_refge"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e38kp"]
texture = ExtResource("2_1f6d0")
texture_region_size = Vector2i(2048, 2048)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_0olg0"]
tile_size = Vector2i(2048, 2048)
sources/1 = SubResource("TileSetAtlasSource_e38kp")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ixf66"]
texture = ExtResource("3_57abc")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_hkag4"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 22
sources/0 = SubResource("TileSetAtlasSource_ixf66")

[node name="exp_world" type="Node2D"]
script = ExtResource("1_vdivu")

[node name="Environment" type="Node2D" parent="."]

[node name="FloorTileMap" type="TileMap" parent="Environment"]
tile_set = SubResource("TileSet_0olg0")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 1, 0, 65535, 1, 0, 0, 1, 0, -65536, 1, 0)

[node name="ObstacleTileMap" type="TileMap" parent="Environment"]
tile_set = SubResource("TileSet_hkag4")
format = 2
layer_0/tile_data = PackedInt32Array(-196603, 0, 0, -262139, 0, 0, -262146, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, 786417, 0, 0, 851953, 0, 0, 917489, 0, 0, 983025, 0, 0, 851954, 0, 0, 786418, 0, 0, 917490, 0, 0, 983026, 0, 0, 851955, 0, 0, 917491, 0, 0, 983027, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 720906, 0, 0, 655370, 0, 0, 589834, 0, 0, 589836, 0, 0, 524300, 0, 0, 524301, 0, 0, 458765, 0, 0, 655372, 0, 0, 786442, 0, 0, 786441, 0, 0, 720905, 0, 0, -589837, 0, 0, -655373, 0, 0, -720908, 0, 0, -786444, 0, 0, -786443, 0, 0, -720907, 0, 0, -655371, 0, 0, -589836, 0, 0, -524300, 0, 0, -655372, 0, 0, -524301, 0, 0, -458765, 0, 0, -851961, 0, 0, -851960, 0, 0, -851959, 0, 0, -851958, 0, 0, -786422, 0, 0, -720886, 0, 0, -786423, 0, 0, -917495, 0, 0, -917496, 0, 0, -786421, 0, 0, -786420, 0, 0, -720884, 0, 0, -917498, 0, 0, -917497, 0, 0, 262137, 0, 0, 262138, 0, 0, 327675, 0, 0, 327676, 0, 0, 393213, 0, 0, 262139, 0, 0, 196601, 0, 0, 196602, 0, 0, -196614, 0, 0, -131078, 0, 0, -131079, 0, 0)

[node name="Player" parent="." instance=ExtResource("4_refge")]

[node name="zombieSpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="lvlTimer" type="Timer" parent="."]
autostart = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-1028, 1016, 1012, 1024, 1028, -1012, -1024, -1024, -1028, 956, -1120, 932, -1132, -1096, 1080, -1116, 1100, 1128, -1112, 1144, -1104, 1008)

[connection signal="timeout" from="zombieSpawnTimer" to="." method="_on_zombie_spawn_timer_timeout"]
[connection signal="timeout" from="lvlTimer" to="." method="_on_lvl_timer_timeout"]
